--- a/static/styles/bootstrap.css
+++ b/static/styles/bootstrap.css
@@ -1,9 +1,3 @@
-.container-fluid {
-  padding: 0; }
-
-.row {
-  width: 100%; }
-
 html,
 body {
   height: 100%; }
@@ -68,6 +62,8 @@ p {
 
 .section {
   display: flex;
+  padding: 15px;
+  flex-wrap: nowrap;
   flex-direction: column;
   flex-basis: 20%;
   background-position: 50% 50%;
@@ -86,19 +82,18 @@ p {
     background-image: url("/static/images/bg5_v01.jpg"); }
   .active .section {
     flex-basis: 5%; }
-  .section.selected {
-    flex-basis: 80%; }
+    .active .section.selected {
+      flex-basis: 80%; }
 
 .content {
   overflow: auto;
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 15px;
-  margin: 15px;
   padding: 15px;
-  -webkit-transition: 1.25s;
-  transition: 1.25s;
+  -webkit-transition: 1.75s;
+  transition: 1.75s;
   -webkit-transform: translateY(-300%);
   transform: translateY(-300%); }
   .selected .content {
-    -webkit-transform: translateY(0);
-    transform: translateY(0); }
+    -webkit-transform: none;
+    transform: none; }
