--- a/static/styles/base.scss
+++ b/static/styles/base.scss
@@ -25,8 +25,14 @@ p {
     height: 100%;
 }
 
-.separator {
-    margin: 25px 0;
+.row-spacing {
+    & .row {
+        margin-bottom: 20px;
+
+        &:last-of-type {
+            margin-bottom: 0px;
+        }
+    }
 }
 
 .close-btn {
@@ -53,10 +59,10 @@ p {
         color: hsl(0, 0%, 100%);
         margin: 0 15px;
         cursor: pointer;
+        @include transition(.25s);
 
         &:hover,
         &.selected {
-            @include transition(.25s);
             color: hsl(208, 56%, 53%);
             text-decoration: none;
         }
@@ -93,12 +99,11 @@ p {
 .section {
     display: flex;
     padding: 15px;
+    flex-basis: 20%;
     flex-wrap: nowrap;
     flex-direction: column;
-    flex-basis: 20%;
     background-position: 50% 50%;
     background-size: cover;
-
     @include transition(.75s);
 
     @for $i from 1 through 5 {
@@ -108,16 +113,17 @@ p {
     }
 
     .active & {
-        flex-basis: 5%;
+        flex-basis: 5% !important;
 
         &.selected {
-            flex-basis: 80%;
+            flex-basis: 80% !important;
         }
     }
 }
 
 // section content
 .content {
+    width: 100%;
     overflow: auto;
     background-color: hsla(0, 0%, 100%, .75);
     border-radius: 15px;
