adding ready to shortcuts

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,6 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <script>
+        console.log(document.readyState);
+        document.onreadystatechange = function() {
+            console.log(document.readyState);
+        };
+        document.addEventListener('readystatechange', function() {
+            console.log(document.readyState);
+        });
+        document.addEventListener('readystatechange', function() {
+            console.log('foo');
+        });
+        document.onreadystatechange = function() {
+            console.log('bar');
+        };
+    </script>
     <title>ZagWedding</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +25,7 @@
     <link rel="stylesheet" href="/static/styles/bootstrap.css">
     <link rel="icon" href="/static/images/favicon152_v01.png">
     <link rel="apple-touch-icon-precomposed" href="/static/images/favicon152_v01.png">
+    <script async src="/static/scripts/main.js"></script>
 </head>
 <body>
 <div class="window">
@@ -68,7 +84,6 @@
         </div>
     </div>
 </div>
-<script src="/static/scripts/main.js"></script>
 <script src="/static/scripts/disable.js"></script>
 </body>
 </html>
