--- a/static/styles/bootstrap.css
+++ b/static/styles/bootstrap.css
@@ -13,9 +13,11 @@ p {
   line-height: 27px; }
 
 .window {
+  height: 100%;
+  display: -webkit-flex;
   display: flex;
-  flex-direction: column;
-  height: 100%; }
+  -webkit-flex-direction: column;
+  flex-direction: column; }
 
 .row-spacing .row {
   margin-bottom: 20px; }
@@ -59,17 +61,20 @@ p {
     font-family: 'Nothing You Could Do', cursive; }
 
 .sections {
-  display: flex;
-  height: 100%; }
+  height: 100%;
+  display: -webkit-flex;
+  display: flex; }
 
 .section {
-  display: flex;
   padding: 15px;
-  flex-basis: 20%;
-  flex-wrap: nowrap;
-  flex-direction: column;
   background-position: 50% 50%;
   background-size: cover;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-basis: 20%;
+  flex-basis: 20%;
+  -webkit-flex-direction: column;
+  flex-direction: column;
   -webkit-transition: 0.75s;
   transition: 0.75s; }
   .section:nth-of-type(1) {
@@ -83,9 +88,11 @@ p {
   .section:nth-of-type(5) {
     background-image: url("/static/images/bg5_v01.jpg"); }
   .active .section {
-    flex-basis: 5% !important; }
+    -webkit-flex-basis: 5%;
+    flex-basis: 5%; }
     .active .section.selected {
-      flex-basis: 80% !important; }
+      -webkit-flex-basis: 80%;
+      flex-basis: 80%; }
 
 .content {
   width: 100%;
