disabling pinch to zoom

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -3,14 +3,28 @@
 <head>
     <title>ZagWedding</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet"
           href="http://fonts.googleapis.com/css?family=Sail|Montez|The+Girl+Next+Door|Finger+Paint|Nothing+You+Could+Do|Sue+Ellen+Francisco">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/styles/bootstrap.css">
     <link rel="icon" href="/static/images/favicon152_v01.png">
     <link rel="apple-touch-icon-precomposed" href="/static/images/favicon152_v01.png">
-    <script async src="/static/scripts/main.js"></script>
+    <script>[
+    ['/static/scripts/shortcuts.js'],
+    ['/static/scripts/wedding.js']
+    ].forEach(function(a){var d=document,e=d.createElement('script');
+    e.src=a[0];e.async=!!a[1];d.head.appendChild(e)})</script>
+    <script>
+    (function(d) {
+        var a = [],
+            b = [];
+        function p(a, y) {
+            var e=d.createElement('script');
+            e.src=a[0];e.async=!!a[1];d.head.appendChild(e)})
+        }
+    })(document);
+    </script>
 </head>
 <body>
 <div class="window">
