--- a/application/templates/the_city.html
+++ b/application/templates/the_city.html
@@ -1,43 +1,79 @@
 <div class="row">
-    <div class="col-xs-12">
-        <h4>San Francisco</h4>
-
-        <p>For those of you that might enjoy a bit of sightseeing while you are here in San Francisco please
-            see a few ideas of fun things to see while you are here. Please note the week of October 18th,
-            there are a few very large events being hosted in San Francisco so hotel rooms will be limited,
-            we recommend booking well in advance. Please see a great guide to the city <a target="_blank"
-                                                                                          href="http://content.time.com/time/travel/cityguide/article/0,31489,1845230_1845056_1845537,00.html">here</a>!
-            A few of our favorites are listed below.</p>
-
-        <p>An <a target="_blank" href="http://www.alcatrazcruises.com/">amazing tour</a> of the historical state
-            prison.
-            Make sure to book tickets in advance as the tour sells out in advance.</p>
+    <div class="col-xs-12">{##}
+        <p>For those of you that might enjoy a bit of sightseeing while you are here in San Francisco please see a few
+            ideas of fun things to see while you are here. Please note the week of October 18th, there are a few very
+            large events being hosted in San Francisco so hotel rooms will be limited, we recommend booking well in
+            advance. Please see a great guide to the city <a
+                    href="http://content.time.com/time/travel/cityguide/article/0,31489,1845230_1845056_1845537,00.html"
+                    target="_blank">here</a>! A few of our favorites are listed below.</p>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>Precidio</h4>
+        <h4><a href="http://www.alcatrazcruises.com/">Alcatraz</a></h4>
 
-        <p>Spend some time getting to know one of the most beautiful <a target="_blank"
-                                                                        href="http://www.nps.gov/prsf/index.htm">National
-            Parks in the nation</a>. There are many
-            self guided tours and wonderful bike/walking paths to explore.</p>
+        <p>An amazing tour of the historical state prison. Make sure to book tickets in advance as the tour sells out in
+            advance.</p>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>North Beach/ Pier 39</h4>
+        <h4><a target="_blank" href="http://www.nps.gov/prsf/index.htm">Presidio</a></h4>
 
-        <p>Where we call home, we have lived in the <a target="_blank"
-                                                       href="http://content.time.com/time/travel/cityguide/article/0,31489,1845230_1845056_1844984,00.html">North
-            Beach neighborhood</a> since moving to SF in 2011. We live right at the base of beautiful <a
-                target="_blank"
-                href="http://sfrecpark.org/destination/telegraph-hill-pioneer-park/coit-tower/">Coit
-            Tower</a> and up the hill from <a target="_blank" href="http://www.sspeterpaulsf.org/church/">Saint’s
-            Peter and
-            Paul church</a>. If you are up for a delicious breakfast head to Mama’s- you will be sure to
-            wait but said to had the best breakfast in town. While in the area make sure to check out
-            Fisherman’s Wharf on pier 39 to take a look at the sea lions, beautiful views, aquatic park, and
-            that’s about it! Don’t spend too much time here as it truly is a tourist trap!</p>
+        <p>Spend some time getting to know one of the most beautiful National Parks in the nation. There are many self
+            guided tours and wonderful bike/walking paths to explore. </p>
     </div>
 </div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4><a href="http://content.time.com/time/travel/cityguide/article/0,31489,1845230_1845056_1844984,00.html"
+               target="_blank">North Beach/ Pier 39</a></h4>
+
+        <p>Where we call home, we have lived in the North Beach neighborhood since moving to SF in 2011. We live right
+            at the base of beautiful <a href="http://sfrecpark.org/destination/telegraph-hill-pioneer-park/coit-tower/" target="_blank">Coit Tower</a> and up the hill from <a href="http://www.sspeterpaulsf.org/church/" target="_blank">Saint’s Peter and Paul Church</a>. Looking for a
+            delicious breakfast? Head to <a href="http://www.mamas-sf.com/" target="_blank">Mama’s</a>- you will be sure to wait but it is said to have the best breakfast in
+            town. While in the area make sure to check out <a href="http://www.fishermanswharf.org/" target="_blank">Fisherman’s Wharf</a> on pier 39 to take a look at the sea lions,
+            beautiful views, and aquatic park.</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+        <h4><a href="http://vantigosf.com/" target="_blank">City Tour with Vantigo</a></h4>
+
+        <p>Our great friends Erik and Amy Horman have launched a fabulously unique tour company here in San Francisco.
+            Lillie, a 1971 Volkswagen Transporter Deluxe will take you on a 7 x 7 San Francisco adventure, a City Lights
+            Night Tour, or out on an Oyster trip never to forget! For those of you who haven’t spent much time in San
+            Francisco or simply want a lovely day with the best tour guide in the city, check out Vantigo! Make sure to
+            book early as Lillie has a limited number of seats and her owners will be joining us at the party on
+            Saturday evening! </p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4><a href="http://www.blazingsaddles.com/san-francisco.aspx" target="_blank">Bike Rentals</a></h4>
+
+        <p>A fun activity and great way to cover some ground here in SF! You can ride over the Golden Gate Bridge, tool
+            around in Sausalito, and take the ferry back to the city. </p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4><a href="http://www.sfcablecar.com/" target="_blank">Cable Car Ride</a></h4>
+
+        <p>A few dollars in San Fran can buy you a roller coaster ride of the city. San Francisco's cable cars are a
+            cute relic of a time before buses and cars – and they give a great retro-style tour of the city's hills, and
+            neighborhoods: Union Square, Chinatown, Fisherman's Wharf and the other districts.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4><a href="http://www.fodors.com/world/north-america/usa/california/napa-and-sonoma/" target="_blank">Wine
+            Country</a></h4>
+
+        <p>One of the best parts of living in the Bay Area is our proximity to beautiful Sonoma and Napa wine country.
+            An easy drive over the Golden Gate will take you to a lovely day of sipping on some of our favorite
+            vino! </p>
+    </div>
+</div>
+
