--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -10,22 +10,18 @@
     <link rel="stylesheet" href="/static/styles/bootstrap.css">
     <link rel="icon" href="/static/images/favicon152_v01.png">
     <link rel="apple-touch-icon-precomposed" href="/static/images/favicon152_v01.png">
-    <script>[
-    ['/static/scripts/shortcuts.js'],
-    ['/static/scripts/wedding.js']
-    ].forEach(function(a){var d=document,e=d.createElement('script');
-    e.src=a[0];e.async=!!a[1];d.head.appendChild(e)})</script>
+    <script async src="/static/scripts/wedding.js"></script>
 </head>
 <body>
 <div class="window">
     <div class="nav container-fluid">
         <div class="row">
-            <div class="hidden-xs col-sm-12">
+            <div class="col-xs-12">
                 <a section="couple">The Couple</a>
                 <a section="day">The Big Day</a>
                 <a section="cast">The Supporting Cast</a>
+                <a section="stay">The Stay</a>
                 <a section="city">The City</a>
-                <a section="pics">The Pics</a>
             </div>
         </div>
     </div>
@@ -37,7 +33,7 @@
             </div>
         </div>
         <div section="day" class="section">
-            <div class="content container-fluid">
+            <div class="content container-fluid row-spacing">
                 {% include 'close_btn.html' %}
                 {% include 'the_day.html' %}
             </div>
@@ -59,16 +55,16 @@
                 {% endfor %}
             </div>
         </div>
-        <div section="city" class="section">
-            <div class="content container-fluid">
+        <div section="stay" class="section">
+            <div class="content container-fluid row-spacing">
                 {% include 'close_btn.html' %}
-                {% include 'the_city.html' %}
+                {% include 'the_stay.html' %}
             </div>
         </div>
-        <div section="pics" class="section">
-            <div class="content container-fluid">
+        <div section="city" class="section">
+            <div class="content container-fluid row-spacing">
                 {% include 'close_btn.html' %}
-                {% include 'the_pics.html' %}
+                {% include 'the_city.html' %}
             </div>
         </div>
     </div>
