--- a/application/templates/the_day.html
+++ b/application/templates/the_day.html
@@ -1,29 +1,49 @@
 <div class="row">
     <div class="col-xs-12">
-        <h4>10 / 18 / 2014</h4>
+        <p class="prominent">Since San Francisco offers such a fun array of activities and we have called this home for
+            the past few years
+            we are looking forward to celebrating our wedding weekend in a unique part of the city. With breathtaking
+            views, rich historical presence, and a convenient location for exploring the Bay Area, the Presidio offers a
+            romantic escape from the city. Check back frequently for additional details about the events.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Out of Town Guest Social</h4>
+        <img alt="![Picture of Inn at the presidio]">
 
-        <p>Since San Francisco offers such a fun array of activities and we have called this home for the
-            past few years we are looking forward to celebrating our wedding weekend in a unique part of the
-            city. With breathtaking views, rich historical presence, and convenient location for exploring
-            the Bay Area, the <a target="_blank" href="http://www.nps.gov/prsf/index.htm">Presidio</a> offers a
-            romantic
-            escape from the city. The wedding events will be held within the park, starting with an out of
-            town guest social on the grounds of the <a target="_blank"
-                                                       href="http://www.innatthepresidio.com/index.php">Inn
-                at the Presidio</a> on Friday evening.</p>
+        <p>Out of town guests are invited to enjoy drinks and desserts on Friday evening at the beautiful <a
+                href="http://www.innatthepresidio.com/index.php" target="_blank">Inn at the
+            Presidio</a> Formal invitation to be sent with details.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Ceremony</h4>
+        <img alt="![Picture of the Chapel of our Lady]">
 
-        <p>Saturday’s events will begin with an afternoon ceremony held at the <a target="_blank"
-                                                                                  href="http://www.presidio.gov/venues/Pages/Chapel-of-Our-Lady.aspx">Chapel
-            of Our Lady</a>
-            with the cocktail hour and reception immediately following just down the path at the <a
-                    target="_blank"
-                    href="http://www.sffilmcentre.com/eventspace/eventspace.html">SF
-                Film Center</a> in the
-            Presidio.</p>
+        <p>The ceremony will be held at the <a href="http://www.presidio.gov/venues/Pages/Chapel-of-Our-Lady.aspx"
+                                               target="_blank">Chapel of Our Lady</a> in the Presidio on Saturday
+            afternoon.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Cocktail Hour and Reception</h4>
+        <img alt="![Picture of the SF Film Center]">
 
-        <p>Hotels: We are still working on gathering room blocks at various hotels around the area and will
-            post as soon as we have solidified. Please note the week of October 18th, there are a few very
-            large events being hosted in San Francisco so hotel rooms will be limited, we recommend booking
-            well in advance.</p>
+        <p>Immediately following the ceremony just down the path at the SF Film Center in the Presidio.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Send Off Picnic</h4>
+        <img alt="![ Picture of Off the Grid in the Presidio]">
+
+        <p>Join us for a <a href="http://offthegridsf.com/markets/PICNIC#food" target="_blank">Picnic in the
+            Presidio</a> - one of our favorite weekend activities! We will save a spot with a pop-up tent, some
+            blankets, and fold out chairs. Off the Grid picnic in the Presidio group provides an array of food trucks,
+            local farmer booths, and a great bar set up for the public to enjoy on a casual Sunday afternoon. Stop by to
+            enjoy the amazing views and say goodbye to the newlyweds.</p>
     </div>
 </div>
